# life

./: .gitignore  CMakeLists.txt  README.md  todo.md
bin_143/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-life-Debug.cmd  launch-life-RelWithDebInfo.cmd  launch-life-Release.cmd  life.sln  life.vcxproj  life.vcxproj.filters
include/: CMakeLists.txt  container.cpp  container.h  life.h  render.cpp  render.h
src/: life.cpp  main.cpp
